Secure UUIDs and transactions logic for points
